[package]
name = "egui-toast"
description = "Toast notifications for the egui library"
version = "0.12.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license = "MIT"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/urholaukkarinen/egui-toast"
repository = "https://github.com/urholaukkarinen/egui-toast"
categories = ["gui"]
keywords = ["egui", "toast", "notification"]

[workspace]
members = ["demo"]

[dependencies]
egui = { version = "0.26.0", default-features = false }
