[package]
name = "egui-toast"
description = "Toast notifications for the egui library"
version = "0.19.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/urholaukkarinen/egui-toast"
repository = "https://github.com/urholaukkarinen/egui-toast"
categories = ["gui"]
keywords = ["egui", "toast", "notification"]

[workspace]
members = ["demo"]

[dependencies]
egui = { version = "0.33", default-features = false }
