[package]
name = "egui-toast-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.21.0", features = ["dark-light"] }
egui-toast = { path = ".." }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"