[package]
name = "egui-toast-demo"
version = "0.8.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui-toast = { path = ".." }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
web-sys = "0.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
